--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "axios": "^0.25.0",
     "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
     "css-loader": "^6.5.1",
