--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
     "css-loader": "^6.5.1",
+    "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
