--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "css-loader": "^6.5.1",
     "express": "^4.18.1",
     "file-saver": "^2.0.5",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
@@ -45,6 +47,7 @@
     "css-loader": "^6.5.1",
     "express": "^4.18.1",
     "file-saver": "^2.0.5",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
