--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
-    "webpack": "^5.67.0"
+    "webpack": "^5.67.0",
+    "fs": "^0.0.2"
   },
   "devDependencies": {},
   "scripts": {
