--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
-    "fs": "^0.0.2"
+    "fs": "^0.0.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {},
   "scripts": {
