--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "body-parser": "^1.20.0"
   },
   "devDependencies": {},
   "scripts": {
