--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.10.0",
-    "body-parser": "^1.20.0"
+    "body-parser": "^1.20.0",
+    "liqpay": "^0.0.1"
   },
   "devDependencies": {},
   "scripts": {
